[project]
name = "new"
version = "0.1.0"
description = ""
authors = [
    {name = "Subarno",email = "subathanatos97@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "chromadb>=1.4.0,<2.0.0",
    "sentence-transformers>=3.0.0,<4.0.0",
    "accelerate>=1.12.0,<2.0.0",
    "PyPDF2>=3.0.0,<4.0.0",
    "python-docx>=1.1.0,<2.0.0",
    "Pillow>=10.0.0,<11.0.0",
    "pytesseract>=0.3.10,<1.0.0",
    "requests>=2.31.0,<3.0.0",
    "beautifulsoup4>=4.12.0,<5.0.0",
    "langchain-text-splitters>=0.2.0,<1.0.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
